# AdventOfCode2025

./: AdventOfCode2025.opam  README.md  day1.ml  day2.ml  dune-project
lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day1.ml  day10.ml  day11.ml  day12.ml  day2.ml  dune
