(lang dune 3.20)

(name AdventOfCode2025)

(generate_opam_files true)

(source
 (github SharieRhea/AdventOfCode2025))

(authors "Sharie Rhea <sharierhea@gmail.com>")

(package
 (name AdventOfCode2025)
 (synopsis "My journey through Advent of Code 2025 using OCaml!")
 (description "Advent of Code is a yearly programming event where small, two part puzzles are uploaded daily during the month of December. This year there will be 12 puzzles, released December 1st through 12th. The event was created and is maintained by Eric Wastl. This year I am attempting all of the puzzles in OCaml, in order to learn the language. Wish me luck!")
 (depends ocaml)
 (tags
  ("Advent of Code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
